<?xml version="1.0" encoding="utf-8"?>
<org.loksatta.android.leader.LeaderItem xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/leader_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/leader_pic_desc" />

    <TextView
        android:id="@+id/leader_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/leader_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/leader_weblink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web" />

        <ImageButton
            android:id="@+id/leader_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leader_twiiter_link"
            android:src="@drawable/twitter" />

        <ImageButton
            android:id="@+id/leader_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leader_facebook_link"
            android:src="@drawable/facebook" />
    </LinearLayout>

</org.loksatta.android.leader.LeaderItem>